--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="d.d4enterprises.toptalrxjavaandroid">
+    package="d.d4enterprises.androidhiverxjavaandroid">
 
     <application
         android:allowBackup="true"
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Example_Basics" />
+        <activity android:name=".MultiObserversAndCompositeDisposables"></activity>
     </application>
 
 </manifest>
